SERVER-8640 Fixed $setOnInsert over a field created by the query portion of an upsert.